--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "clone": "^1.0.2",
     "datastar": "~1.3.1",
     "datastar-test-tools": "~1.0.0",
-    "godaddy-style": "^3.1.0",
+    "eslint": "^4.4.1",
+    "eslint-config-godaddy": "^2.0.0",
+    "eslint-plugin-json": "^1.2.0",
+    "eslint-plugin-mocha": "^4.11.0",
     "istanbul": "^0.3.18",
     "mocha": "^2.2.5",
     "mocha-istanbul": "^0.2.0",
