--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "istanbul cover ./node_modules/.bin/_mocha -- test/*.test.js",
-    "eslint": "godaddy-js-style-eslint -c .eslintrc lib/ test/",
-    "jscs": "godaddy-js-style-jscs lib/ test/",
-    "lint": "npm run jscs && npm run eslint",
-    "pretest": "npm run lint"
+    "eslint": "eslint-godaddy -c .eslintrc lib/ test/",
+    "pretest": "npm run eslint"
   },
   "repository": {
     "type": "git",
@@ -30,7 +28,10 @@
     "clone": "^1.0.2",
     "datastar": "~1.3.1",
     "datastar-test-tools": "~1.0.0",
-    "godaddy-style": "^3.1.0",
+    "eslint": "^4.4.1",
+    "eslint-config-godaddy": "^2.0.0",
+    "eslint-plugin-json": "^1.2.0",
+    "eslint-plugin-mocha": "^4.11.0",
     "istanbul": "^0.3.18",
     "mocha": "^2.2.5",
     "mocha-istanbul": "^0.2.0",
