--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Datastar models for warehouse",
   "main": "lib/index.js",
   "scripts": {
-    "test": "istanbul cover ./node_modules/.bin/_mocha -- test/*.test.js",
+    "test": "nyc --reporter=text --reporter=lcov mocha test/*.test.js",
     "eslint": "eslint-godaddy -c .eslintrc lib/ test/",
     "pretest": "npm run eslint"
   },
@@ -22,21 +22,20 @@
   "author": "GoDaddy Operating Company LLC",
   "license": "MIT",
   "devDependencies": {
-    "assume": "^1.4.1",
-    "async": "^1.4.2",
-    "babel-eslint": "^6.1.2",
-    "clone": "^1.0.2",
-    "datastar": "~1.3.1",
-    "datastar-test-tools": "~1.0.0",
-    "eslint": "^4.4.1",
+    "assume": "^2.1.0",
+    "async": "^2.6.1",
+    "babel-eslint": "^8.2.6",
+    "clone": "^2.1.1",
+    "datastar": "^1.5.0",
+    "datastar-test-tools": "^1.0.0",
+    "eslint": "^5.2.0",
     "eslint-config-godaddy": "^2.0.0",
     "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-mocha": "^4.11.0",
-    "istanbul": "^0.3.18",
-    "mocha": "^2.2.5",
-    "mocha-istanbul": "^0.2.0",
-    "proxyquire": "~1.7.2",
-    "sinon": "^1.17.0"
+    "eslint-plugin-mocha": "^5.1.0",
+    "mocha": "^5.2.0",
+    "nyc": "^12.0.2",
+    "proxyquire": "^2.0.1",
+    "sinon": "^6.1.4"
   },
   "dependencies": {
     "after": "^0.8.1",
