--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clone": "^2.1.2",
     "datastar": "^1.7.0",
     "datastar-test-tools": "^1.0.0",
+    "dynamodb": "^1.2.1",
     "eslint": "^5.16.0",
     "eslint-config-godaddy": "^2.1.1",
     "eslint-plugin-json": "^1.4.0",
@@ -42,6 +43,7 @@
     "bl": "^1.1.2",
     "diagnostics": "~1.0.1",
     "hyperquest": "^2.1.3",
+    "joi": "^14.3.1",
     "json-try-parse": "~1.0.0",
     "lodash.difference": "^3.2.2",
     "object-assign": "^4.0.1"
