--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "after": "^0.8.1",
     "bl": "^1.1.2",
     "diagnostics": "~1.0.1",
+    "dynastar": "^1.0.0",
     "hyperquest": "^2.1.3",
     "joi": "^14.3.1",
     "json-try-parse": "~1.0.0",
