--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "warehouse-models",
-  "version": "5.9.1",
+  "name": "warehouse-models-dynamo",
+  "version": "6.0.0-0",
   "description": "Datastar models for warehouse",
   "main": "lib/index.js",
   "scripts": {
     "test": "nyc --reporter=text --reporter=lcov mocha test/*.test.js",
+    "localstack": "docker run -it -p 4569:4569 --rm localstack/localstack:0.10.3",
     "eslint": "eslint-godaddy -c .eslintrc lib/ test/",
-    "pretest": "npm run eslint"
+    "posttest": "npm run eslint"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "assume": "^2.2.0",
     "async": "^2.6.2",
+    "aws-liveness": "^1.1.0",
     "babel-eslint": "^10.0.0",
     "clone": "^2.1.2",
     "datastar": "^1.7.0",
@@ -42,6 +44,7 @@
     "after": "^0.8.1",
     "bl": "^1.1.2",
     "diagnostics": "~1.0.1",
+    "dynamodb-x": "^1.2.3",
     "dynastar": "^1.0.0",
     "hyperquest": "^2.1.3",
     "joi": "^14.3.1",
