--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,15 @@ node_js:
   - "8"
   - "10"
 
+before_install:
+# package-lock.json was introduced in npm@5
+- '[[ $(node -v) =~ ^v9.*$ ]] || npm install -g npm@latest' # skipped when using node 9
+- docker pull localstack/localstack
+- docker run -d --name localstack -p 4569:4569 --rm localstack/localstack
+
+install: npm install
 services:
-  - cassandra
+  - docker
 matrix:
   fast_finish: true
   
