--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "warehouse-models-dynamo",
-  "version": "6.0.0-0",
+  "name": "warehouse-models",
+  "version": "5.9.1",
   "description": "Datastar models for warehouse",
   "main": "lib/index.js",
   "scripts": {
@@ -15,8 +15,8 @@
   },
   "keywords": [
     "warehouse",
-    "datastar",
-    "cassandra",
+    "dynastar",
+    "dynamodb",
     "carpenter",
     "feedsme"
   ],
@@ -28,8 +28,6 @@
     "aws-liveness": "^1.1.0",
     "babel-eslint": "^10.0.0",
     "clone": "^2.1.2",
-    "datastar": "^1.7.0",
-    "datastar-test-tools": "^1.0.0",
     "dynamodb": "^1.2.1",
     "eslint": "^5.16.0",
     "eslint-config-godaddy": "^2.1.1",
@@ -45,7 +43,7 @@
     "bl": "^1.1.2",
     "diagnostics": "~1.0.1",
     "dynamodb-x": "^1.2.3",
-    "dynastar": "^1.0.0",
+    "dynastar": "^1.1.0",
     "hyperquest": "^2.1.3",
     "joi": "^14.3.1",
     "json-try-parse": "~1.0.0",
