--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "nyc --reporter=text --reporter=lcov mocha test/*.test.js",
+    "localstack": "docker run -it -p 4569:4569 --rm localstack/localstack:0.10.3",
     "eslint": "eslint-godaddy -c .eslintrc lib/ test/",
-    "pretest": "npm run eslint"
+    "posttest": "npm run eslint"
   },
   "repository": {
     "type": "git",
@@ -14,8 +15,8 @@
   },
   "keywords": [
     "warehouse",
-    "datastar",
-    "cassandra",
+    "dynastar",
+    "dynamodb",
     "carpenter",
     "feedsme"
   ],
@@ -24,10 +25,10 @@
   "devDependencies": {
     "assume": "^2.2.0",
     "async": "^2.6.2",
+    "aws-liveness": "^1.1.0",
     "babel-eslint": "^10.0.0",
     "clone": "^2.1.2",
-    "datastar": "^1.7.0",
-    "datastar-test-tools": "^1.0.0",
+    "dynamodb-x": "^1.2.3",
     "eslint": "^5.16.0",
     "eslint-config-godaddy": "^2.1.1",
     "eslint-plugin-json": "^1.4.0",
@@ -41,7 +42,9 @@
     "after": "^0.8.1",
     "bl": "^1.1.2",
     "diagnostics": "~1.0.1",
+    "dynastar": "^1.1.0",
     "hyperquest": "^2.1.3",
+    "joi": "^14.3.1",
     "json-try-parse": "~1.0.0",
     "lodash.difference": "^3.2.2",
     "object-assign": "^4.0.1"
